# Recall

./: .gitignore  MCP_DEBUG.md  README.md  pyproject.toml  requirements.txt  run.sh
recall/: chat.py  doctreemodel.py  main.py  mcp_server.py  revise.py  store.py
recall/qml/: Main.qml
tests/: test_store.py
