[project]
name = "recall-wiki"
version = "1.0"
description = "Wiki-like tree of interactive documents with FTS search and an MCP server"
requires-python = ">=3.10"
dependencies = ["PySide6-Essentials"]  # no WebEngine — rendering is native QML

[project.scripts]
recall = "recall.main:main"
recall-mcp = "recall.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recall"]
